feat: добавлено редактирование товара
